log-schemas/27.5/opcua_binary_read_nodes_to_read.rst
``opcua_binary_read_nodes_to_read`` field reference
---------------------------------------------------

.. list-table::
   :header-rows: 1
   :class: longtable
   :widths: 1 3

   * - Field (Type)
     - Description

   * - ``ts`` (time)
     - The ts information.

   * - ``uid`` (string)
     - The uid information.

   * - ``id.orig_h`` (string - addr)
     - The originator's IP address.

   * - ``id.orig_p`` (integer - port)
     - The originator's port number.

   * - ``id.resp_h`` (string - addr)
     - The responder's IP address.

   * - ``id.resp_p`` (integer - port)
     - The responder's port number.

   * - ``nodes_to_read_link_id`` (string)
     - The nodes_to_read_link_id information.

   * - ``node_id_encoding_mask`` (string)
     - The node_id_encoding_mask information.

   * - ``node_id_namespace_idx`` (integer - count)
     - The node_id_namespace_idx information.

   * - ``node_id_numeric`` (integer - count)
     - The node_id_numeric information.

   * - ``node_id_string`` (string)
     - The node_id_string information.

   * - ``node_id_guid`` (string)
     - The node_id_guid information.

   * - ``node_id_opaque`` (string)
     - The node_id_opaque information.

   * - ``attribute_id`` (integer - count)
     - The attribute_id information.

   * - ``attribute_id_str`` (string)
     - The attribute_id_str information.

   * - ``index_range`` (string)
     - The index_range information.

   * - ``data_encoding_name_idx`` (integer - count)
     - The data_encoding_name_idx information.

   * - ``data_encoding_name`` (string)
     - The data_encoding_name information.
